agregando links de archivos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="es" ng-app="">
+<html lang="es" ng-app="loaderApp">
 <head>
     <meta charset="UTF-8">
 
@@ -12,6 +12,15 @@
 
     <title>Loader</title>
 
+    <!-- angularJS -->
+    <script src="node_modules/angular/angular.min.js"></script>
+    <script src="node_modules/angular-route/angular-route.js"></script>
+
+    <!-- config app   -->
+    <script src="public/js/config.js"></script>
+
+    <!--  config routes - app  -->
+    <script src="public/js/config-routes.js"></script>
 </head>
 <body>
 
