agregando archivo externos de controladores

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 
     <!--  config routes - app  -->
     <script src="public/js/config-routes.js"></script>
+
+    <!-- controller  app -->
+    <script src="public/js/controller/controller-clientes.js"></script>
 </head>
 <body>
 
