--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
     <title>Loader</title>
 
+
+    <!--  styles css  -->
+    <link rel="stylesheet" href="public/css/lib/jeremias-lib/jeremias-lib.css">
+    <link rel="stylesheet" href="public/css/lib/easydom/easydom.css">
+
+    <!-- library js   -->
+    <script src="public/css/lib/easydom/easydom.js"></script>
+
     <!-- angularJS -->
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="node_modules/angular-route/angular-route.js"></script>
