--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
     <title>Loader</title>
 
 
-    <!--  styles css  -->
+    <!--library  styles css  -->
     <link rel="stylesheet" href="public/css/lib/jeremias-lib/jeremias-lib.css">
     <link rel="stylesheet" href="public/css/lib/easydom/easydom.css">
+
+    <!-- style css principal   -->
+    <link rel="stylesheet" href="public/css/main.css">
 
     <!-- library js   -->
     <script src="public/css/lib/easydom/easydom.js"></script>
