Agregando controladores a pagina principal

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
     <!-- controller  app -->
     <script src="public/js/controller/controller-clientes.js"></script>
+    <script src="public/js/controller/controller-all.js"></script>
+
 </head>
 <body>
 
